# kg_feature_engineering

./: README.md  abstracts_downloader.py  download_cellmarker.py  download_meshgraph.py  download_msigdb.py  download_pathways.py  download_reactome.py  download_uniprot.py  gene_names.py  graph_sources.txt  pyproject.toml  pyrightconfig.json
data/: HP_TYPE_II_DIABETES_MELLITUS.v2023.1.Hs.grp  KEGG_TYPE_II_DIABETES_MELLITUS.v2023.1.Hs.grp  WP_TYPE_II_DIABETES_MELLITUS.v2023.1.Hs.grp  mets_diffexp_t2d_hba1c_2023_08_01.csv  mets_hba1c_outliers_2023_07_21.csv  mets_lassocv_hba1c_top_weights.csv  prots_diffexp_t2d_hba1c_2023_08_01.csv  prots_hba1c_outliers_2023_07_21.csv  prots_lassocv_hba1c_top_weights.csv  prots_lassocv_homa_ir_top_weights.csv  prots_lassocv_insulin_top_weights.csv
examples/: example.py  graph_merge_example.py  multiprocessing_example.py  node2vec_example.py  node2vec_spoke_example.py  ot_example.py
notebooks/: Arivale_Outliers_Analysis.ipynb  Arivale_Outliers_Analysis_spoke_2023.ipynb  Arivale_Spoke_node_stats.ipynb  Arivale_next_hba1c_predictor_analysis.ipynb  Feature_Analysis.ipynb  Feature_Analysis_2.html  Feature_Analysis_2.ipynb  Feature_Analysis_2_igraph.ipynb  Feature_Analysis_2_spoke_2023.html  Feature_Analysis_2_spoke_2023.ipynb  Unified_Arivale_T2D_analysis_SPOKE2021_2023_08_07.html  Unified_Arivale_T2D_analysis_SPOKE2021_2023_08_07.ipynb  aml_drug_pred_genes.ipynb  for_plot.csv  hypergeom_spoke.ipynb  kg_spoke_explanations.ipynb  null_model.ipynb  plotting_experiments.ipynb  recover_covid_2023_09_11.html  recover_covid_2023_09_11.ipynb  (+1 more)
(+33 files in other folders)
