[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-feature-engineering"
version = "0.0.1"
authors = [
  { name="Yue Zhang", email="yue.zhang@isbscience.org" },
]
description = "Knowledge graphs for feature engineering and explanation"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "networkx",
    "python-igraph",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yjzhang/kg_feature_engineering"
"Bug Tracker" = "https://github.com/yjzhang/kg_feature_engineering/issues"

[tool.setuptools]
package-dir = {"" = "src"}
